--- a/MathDemo/SimpleCalculator/SimpleCalculator.csproj
+++ b/MathDemo/SimpleCalculator/SimpleCalculator.csproj
@@ -17,4 +17,12 @@
   <ItemGroup>
     <Compile Remove="Controllers\ValuesController.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Remove="app.yaml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="app.yaml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 </Project>
